swagger_v1.0.5 fix resetPassword
